change invalid properties of height to min-height, still preventing overflow

--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: minmax(min-content, 100dvh);
+  min-height: 100dvh;
 }
 
 /* Card */
@@ -99,7 +99,7 @@ main {
   border-radius: 1rem;
   margin: 5dvh auto;
   width: 90%;
-  height: minmax(min-content, 90dvh);
+  min-height: 90dvh;
 }
 
 @media screen and (min-width: 687px) {
